- Switch default install directory back to PROGRAMFILES\RosBE. (Peter Ward)
- Detect if running on a x64 system and install to "Program Files" and not "Program Files (x86)" to avoid problems with (). (Peter Ward)
- Add a "Standard MinGW Build Environment" and the associated MinGW.cmd + an icon. (Peter Ward)

*** Nov 18th, 2007 - RosBE 1.0 Released

- Updated: GCC 4.1.3 Build 20071015 with recent patches to get makex run under Vista. (Peter Ward, Mike Nordell)
- Updated: Binutils 2.18.50 Build 20071015. (Peter Ward)
- Updated: NASM to 0.99.06 (Daniel Reimer)
- Updated: You can now select the components you want to install. (Daniel Reimer)

- Updated RosBE Configuration Tool. (Pierre Schweitzer, Peter Ward, Daniel Reimer)
   - Added French translation. (Pierre Schweitzer)
   - Added the possibility to choose MingW directory. (Pierre Schweitzer)
   - Added check to see if MingW dir is right. (Pierre Schweitzer)
   - Added support for WinXP style. (Pierre Schweitzer)
   - Added the support of C99. (Pierre Schweitzer)
   - Fixed warnings. (Pierre Schweitzer)
   - Added -s and went from -O3 to -O2 in Makefile. (Daniel Reimer)
   - Correct Button States and Whitespace changes. (Pierre Schweitzer)
   - Save button is disabled until a parameter is changed. (Pierre Schweitzer)
   - Definitively fixed resources IDs. (Pierre Schweitzer)
   - Added check to test if log dir exists and if it doesn't, it's created. (Pierre Schweitzer)
   - Added check to avoid writing in a non-existant file. (Pierre Schweitzer)
   - Updated todo list. (Pierre Schweitzer)
   - Reorganized resources. (Pierre Schweitzer)
   - Added a basic font preview. (Pierre Schweitzer)
   - Code cleanup. (Pierre Schweitzer, Ged Murphy, Peter Ward)
   - Added checks to avoid buffers overflow. (Pierre Schweitzer)
   - Fixed a small regression with save button state introduced in rev 29850. (Pierre Schweitzer)
   - Moved UINT i to loop as it was done previously. (Pierre Schweitzer)